--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-this is a simple starter template for a  Google App Engine project
+this is a simple starter template for a Google App Engine project using OpenID authentication
 
